fixed the modal so it's at the front of the page, instead of behind the search-panel

--- a/style.css
+++ b/style.css
@@ -350,6 +350,8 @@ main {
   align-items: center;
 
   justify-content: center;
+
+  z-index: 9999;
 }
 
 .hidden {
